force-app/main/default/objects/DelimitedLandCultures__c/DelimitedLandCultures__c.object-meta.xml
<CustomObject>
    
    <label>Cultura do Talhão</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Culturas dos Talhões</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>