force-app/main/default/objects/DelimitedLandCultures__c/fields/AreaCultivated__c.field-meta.xml
<CustomField>
    <fullName>AreaCultivated__c</fullName>
    <label>Área Cultivada</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>