force-app/main/default/objects/DelimitedLandCultures__c/fields/Crop__c.field-meta.xml
<CustomField>
    <fullName>Crop__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Safra</label>
    <referenceTo>Crop__c</referenceTo>
    <relationshipLabel>Culturas dos Talhões</relationshipLabel>
    <relationshipName>Culturas_dos_Talhoes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>