force-app/main/default/objects/DelimitedLandCultures__c/fields/Culture__c.field-meta.xml
<CustomField>
    <fullName>Culture__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cultura</label>
    <referenceTo>Culture__c</referenceTo>
    <relationshipLabel>Culturas dos Talhões</relationshipLabel>
    <relationshipName>Culturas_dos_Talhoes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>