force-app/main/default/objects/DelimitedLandCultures__c/fields/DelimitedLand__c.field-meta.xml
<CustomField>
    <fullName>DelimitedLand__c</fullName>
    <label>Talhão</label>
    <referenceTo>DelimitedLand__c</referenceTo>
    <relationshipLabel>Culturas dos Talhões</relationshipLabel>
    <relationshipName>Culturas_dos_Talhoes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>