force-app/main/default/objects/DelimitedLandCultures__c/fields/TechnologicalLevel__c.field-meta.xml
<CustomField>
    <fullName>TechnologicalLevel__c</fullName>
    <label>Nível Tecnológico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Alta</label>
            </value>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Média</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Baixa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>