force-app/main/default/objects/DelimitedLandCultures__c/fields/TotalAreaMeters__c.field-meta.xml
<CustomField>
    <fullName>TotalAreaMeters__c</fullName>
    <formula>CASE(  DelimitedLand__r.UnitMeasurement__c  ,&quot;Hectare&quot;, 10000,&quot;Are&quot;, 100, &quot;Centiare&quot;, 1,&quot;Alqueire Mineiro&quot;, 48400, &quot;Alqueire Goiano&quot;, 48400, &quot;Alqueire Paulista&quot;, 24200, &quot;Alqueire do norte&quot;, 27225, &quot;Alqueire do RJ&quot; , 27225, &quot;Alqueire Baiano&quot;, 69800, &quot;Litro&quot;, 605, 1 ) *  AreaCultivated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Área Total (m²)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>