force-app/main/default/objects/DelimitedLandCultures__c/fields/WarehouseCapability__c.field-meta.xml
<CustomField>
    <fullName>WarehouseCapability__c</fullName>
    <label>Capacidade do armazém</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>