force-app/main/default/objects/DelimitedLandCultures__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AreaCultivated__c</columns>
    <columns>Culture__c</columns>
    <columns>Crop__c</columns>
    <columns>DelimitedLand__c</columns>
    <columns>Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>